@@ -83,6 +83,9 @@ VI.   PROBLEMS CORRECTED AND NEW FEATURES IN PRIOR RELEASES
     install the sample configurations and FORWARD_CLEAR_MARK will
     default to Yes on systems with MARK support.
 
+10) The install scripts in the tarballs now correctly create init
+    symlinks on recent Ubuntu releases.
+
 ----------------------------------------------------------------------------
            I I.  K N O W N   P R O B L E M S   R E M A I N I N G
 ----------------------------------------------------------------------------
