@@ -21,6 +21,8 @@ Changes in Shorewall 4.4.14
 
 10) Change value of FORWARD_CLEAR_MARK in *.conf.
 
+11) Use update-rc.d to install init symlinks.
+
 Changes in Shorewall 4.4.13
 
 1)  Allow zone lists in rules SOURCE and DEST.
